Renamed index.php to index.html.  Added link to github code.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <header>D3 Setup</header>
     <p>Click on this text to update the chart.</p>
     <p>Click the bars to sort in ascending/descending order.</p>
+    <p><a href="https://github.com/arsm800/d3_bars">See the code</a></p>
     <script>
       var dataset = [5, 10, 13, 19, 21, 25, 22, 18, 15, 13, 11, 12, 15, 20, 18, 17, 16, 18, 23, 25];
 
